# CMakeEx

./: .gitignore  CMakeLists.txt  start.sh  start_cpp.sh  start_python.sh
scripts/: voice_recognition.py
src/: Movement.cpp  Movement.h  Robot.cpp  Robot.h  SoundRecognizer.cpp  SoundRecognizer.h  main.cpp
src/assets/: map.data
